changing the background attachment to scroll, on mobile, to avoid bug

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,9 @@
 @media screen and (max-width: 590px) {
+
+    .banner-container {
+        background-attachment: scroll;
+    }
+    
     #fifthTitle{
         font-size: 22px;
       }
